# fast_zero_dunossauro

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 01f44f40b30e_created_column_updated_at_in_user_table.py  71cfd2d47442_create_users_table.py
src/fast_zero/: app.py  schemas.py  security.py
src/fast_zero/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
